--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,20 +11,22 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+      with:
+        submodules: true
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: 'latest'
-        extended: true
+        # extended: true
 
-    - name: Build Hugo Site
-      run: hugo
+    - name: Build
+      run: hugo --minify
 
     - name: Deploy to AWS S3
       run: |
-        aws s3 sync public s3://abishevs.dev --delete
+        aws s3 sync public s3://abishevs.dev 
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
