--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,15 +24,16 @@ jobs:
     - name: Build
       run: hugo --minify
 
-    - uses: actions/checkout@master
+    - name: Deploy to AWS s3
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
         SOURCE_DIR: './public'
-        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_S3_BUCKET: 'abishevs.dev'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'eu-north-1'
 
     - name: Invalidate CloudFront Distribution
       uses: chetan/invalidate-cloudfront-action@v2
