--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,13 +27,13 @@ jobs:
     - name: Deploy to AWS s3
       uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete
+        args: --delete
       env:
         SOURCE_DIR: './public'
-        AWS_S3_BUCKET: 'abishevs.dev'
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: 'eu-north-1'
+        # AWS_REGION: 'eu-north-1'
 
     - name: Invalidate CloudFront Distribution
       uses: chetan/invalidate-cloudfront-action@v2
