--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         # extended: true
 
     - name: Build
-      run: hugo --minify
+      run: hugo
 
     - name: Deploy to AWS s3
       uses: jakejarvis/s3-sync-action@master
